# diablo-ii-runs-api

./: .env.example  Cargo.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
migrations/: 20211108005746_create_runs_table.down.sql  20211108005746_create_runs_table.up.sql  20211118022821_add_session_field_to_runs.down.sql  20211118022821_add_session_field_to_runs.up.sql
src/: api.rs  context.rs  database.rs  main.rs  trace.rs
